--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-CN">
 
 <!-- Mirrored from gvbgzc.cn/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 09 Jun 2019 03:28:05 GMT -->
@@ -70,7 +70,7 @@ function alert_login(url,isauto,lang,target){
 		{
 			var sWidth = window.innerWidth;
 		}
-		var ptLoginUrl = window.location.protocol + "login/nullcode_login.php";
+		var ptLoginUrl = window.location.protocol + "login/nullcode_login.html";
 		var deturl = escape(getHost() + url);
 		if(url.indexOf("http") == 0)
 		{
@@ -261,11 +261,10 @@ function setCenter(){
 <div id="footer">
 <div id="footer">
   <p><a href="http://www.tencent.com/" target="_blank">关于腾讯</a>|<a href="http://www.tencent.com/index_e.shtml" target="_blank">About Tencent</a>|<a href="http://www.qq.com/contract.shtml" target="_blank">服务条款</a>|<a href="http://hr.tencent.com/" target="_blank">腾讯招聘</a>|<a href="http://kf.qq.com/special_auto/aq.html" target="_blank">腾讯客服<span id="debug"></span></a></p>
-  <p>Copyright ? 1998 - 2016 Tencent. All Rights Reserved </p>
+  <p>Copyright ? 1998 - 2020 Tencent. All Rights Reserved </p>
   <p>腾 讯 公 司 版 权 所 有</p>
 </div>
 
 </div></div></body>
-<!-- Mirrored from gvbgzc.cn/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 09 Jun 2019 03:28:09 GMT -->
 </html>
 	
